Fix NPE and temporarily use only compile scope (for testing purposes)